--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,5 @@ install:
 
 script:
   - go build
-  - go test
+  - go test -v -covermode=count -coverprofile=coverage.out
+    $HOME/gopath/bin/goveralls -coverprofile=coverage.out -service=travis-ci -repotoken $COVERALLS_TOKEN
